k8s/gitlab/gitlab.yml
#gitlab
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app: gitlab-__CI_PROJECT_NAME__
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  type: NodePort
  selector:
    name: gitlab
  ports:
    - name: gitlab-ui
      port: 10080
      protocol: TCP
      targetPort: 80
    - name: gitlab-ssh
      port: 10022
      protocol: TCP
      targetPort: 22
    - name: gitlab-registry
      port: 5050
      protocol: TCP
      targetPort: 5050

  selector:
    app: gitlab-__CI_PROJECT_NAME__
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab-__CI_PROJECT_NAME__
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gitlab-__CI_PROJECT_NAME__
  template:
    metadata:
      labels:
        app: gitlab-__CI_PROJECT_NAME__
        ref: __CI_ENVIRONMENT_SLUG__
      annotations:
        app.gitlab.com/app: __CI_PROJECT_PATH_SLUG__
        app.gitlab.com/env: __CI_ENVIRONMENT_SLUG__
    spec:
      containers:
        - image: gitlab/gitlab-ce:12.7.0-ce.0
          name: gitlab
          ports:
            - name: registry
              containerPort: 5050
            - name: ssh
              containerPort: 22
            - name: http
              containerPort: 80
          resources:
            limits:
              memory: 3500Mi
              cpu: 1200m
            requests:
              memory: 3000Mi
              cpu: 1000m
          volumeMounts:
            - name: gitlab-opt
              mountPath: /var/opt/gitlab
            - name: gitlab-config
              mountPath: /etc/gitlab
            - name: gitlab-log
              mountPath: /var/log/gitlab
      volumes:
        - name: gitlab-config
          persistentVolumeClaim:
            claimName: gitlab-pv-claim-config
        - name: gitlab-opt
          persistentVolumeClaim:
            claimName: gitlab-pv-claim-opt
        - name: gitlab-log
          persistentVolumeClaim:
            claimName: gitlab-pv-claim-log
---
# Ingress Resource
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
#    nginx.ingress.kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 5120m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: ingress-__CI_PROJECT_NAME__
    ref: __CI_ENVIRONMENT_SLUG__

spec:
#  tls:
#  - hosts:
#    - __CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
#    - backend.__CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
#    - gitlab.__CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
#    - registry.__CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
#    secretName: review-deploy-tls
  rules:
  - host: __CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 80
  - host: backend.__CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
    http:
      paths:
      - path: /
        backend:
          serviceName: backend
          servicePort: 8080
  - host: gitlab.__CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 10080
  - host: registry.__CI_ENVIRONMENT_SLUG__.__KUBE_INGRESS_BASE_DOMAIN__
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 5050
